--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 .header{
   background-color: #FFE2E2;
   text-align: center;
-  padding-bottom: 100px;
+  padding-bottom: 20px;
   margin-bottom: 0px;
 }
 
@@ -19,14 +19,14 @@ body{
 
 .scrollmenu{
   padding-top: 400px;
-  padding-bottom: 50px;
+  padding-bottom: 30px;
   background-color:#F6F6F6;
   overflow: auto;
   white-space: nowrap;
 }
 
 .title{
-  padding-top: 100px;
+  padding-top: 50px;
   font-family: 'Sacramento', cursive;
   font-weight: bolder;
   font-size:110px;
@@ -45,7 +45,7 @@ body{
 
 .navbar{
     position: absolute;
-    padding-bottom: 100px;
+    padding-bottom: 50px;
     font-weight: bold;
     font-family: 'Spline Sans Mono', monospace;
     font-size: 15pt;
@@ -98,7 +98,7 @@ body{
   }
 
   .linkNavBar:active, li a:visited, a:hover, a:link{
-    color:#FFE2E2;
+    color:#595B83;
  }
 
 
@@ -193,8 +193,8 @@ body{
 
 .login{
   background:#FFE2E2;
-  border-radius:10px;
-  box-shadow:0px 0px 10px #000;
+  border-radius:5px;
+  box-shadow:0px 0px 5px #595B83;
   font-size: 30px;
   font-family: 'Spline Sans Mono', monospace;
   color:#595B83;
@@ -210,7 +210,9 @@ body{
   margin-left: -90px;
   margin-top: 30px;
   margin-bottom: 30px;
-  border: none;
+  border-radius:10px;
+  box-shadow:0px 0px 10px #000;
+  background-color: white;
 }
 
 .Login_dugme{
@@ -222,4 +224,83 @@ body{
   font-family: 'Spline Sans Mono', monospace;
   color:#595B83;
   font-size: 20px;
+}
+
+.table{
+  margin-bottom:200px;
+  height: 150px;
+  font-family: 'Spline Sans Mono', monospace;
+  color:#595B83;
+  font-size: 25px;
+  background-color: white;
+}
+
+table tr td{
+  vertical-align: middle;
+}
+
+table tr{
+  vertical-align: middle;
+}
+table th{
+  height: 150px;
+  background-color: #FFE2E2;
+}
+
+.Salon{
+  display: inline-block;
+  text-align: left;
+}
+
+.salon_slika2{
+  float: left;
+  width: 40%;
+  height: 40%;
+  padding-right: 100px;
+}
+
+.subsubtitle{
+  font-weight: bold;
+  font-family: 'Spline Sans Mono', monospace;
+  color: #595B83;
+  font-size:20px;
+  padding-top: 25px;
+  padding-bottom: 30px;
+}
+
+
+
+
+.star-wrapper {
+  top: 50%;
+  right: 50%;
+  margin-left:300px;
+  transform: translate(-50%, -50%);
+  direction: rtl;
+}
+.star-wrapper a {
+  font-size: 2em;
+  color: #595B83;
+  text-decoration: none;
+  transition: all 0.5s;
+  margin: 4px;
+}
+.star-wrapper a:hover {
+  color: gold;
+  transform: scale(1.3);
+}
+.s1:hover ~ a {
+  color: gold;
+}
+.s2:hover ~ a {
+  color: gold;
+}
+.s3:hover ~ a {
+  color: gold;
+}
+.s4:hover ~ a {
+  color: gold;
+}
+.s5:hover ~ a {
+  color: gold;
 }
